# facade

assets/: client.jsonc  config.jsonc  server.jsonc
crates/common/: Cargo.toml
crates/common/src/: net.rs  proxy.rs
crates/facade/: Cargo.toml
crates/facade/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/socks/: Cargo.toml
crates/socks/src/: auth.rs  client.rs  lib.rs  relay.rs  server.rs  socks5.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  net.rs
crates/vmess/: Cargo.toml
crates/vmess/src/: aead.rs  lib.rs  protocol.rs  relay.rs  stream.rs
crates/vmess/src/crypto/: fnv.rs  mod.rs
