[package]
name = "facade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.22.0", features = ["full"] }
socks = { path = "../socks" }
serde_json = "1.0.89"
clap = "4.0.27"
