[package]
name = "facade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full", "tracing"] }
socks = { path = "../socks" }
serde_json = "1.0.89"
clap = "4.0.27"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
console-subscriber = "0.1.8"
