[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = { version = "0.24.1", features = ["async"] }
log = "0.4.17"
tokio = { version = "1.22.0", features = ["full"] }

socks = { path = "../socks" }
