[package]
name = "socks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }

vmess = { path = "../vmess" }
common = {path = "../common"}
futures = "0.3.25"
