[package]
name = "socks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"

vmess = { path = "../vmess" }
common = { path = "../common" }
types = { path = "../types" }
